refactor: refatorado para utilizar return_date em vez de return para não causar confusão
